added - [wip] header

--- a/src/css/site.styl
+++ b/src/css/site.styl
@@ -1,6 +1,15 @@
 // Vendor
 @import '../../node_modules/normalize.css/normalize.css'
 
+// base
+@import 'base/mixins'
+@import 'base/variables'
+
 // utils
 @import 'utils/reset'
+@import 'utils/helpers'
 @import 'utils/layout'
+
+// components
+@import 'components/header'
+@import 'components/navigation'
