--- a/src/css/utils/layout.styl
+++ b/src/css/utils/layout.styl
@@ -5,7 +5,10 @@
   min-height 100vh
 
   &__header
-    height 100vh
+    position fixed
+    top 2rem
+    width calc(100% + 2rem)
+    left -1rem
 
   &__content
     flex 1
