--- a/templates/components/header.jade
+++ b/templates/components/header.jade
@@ -1,3 +1,12 @@
+//- dependecies
+include navigation
+
+//- markup
 mixin header()
   header.c-header.u-layout__header
-    h1 logo
+    .h-limiter
+      .c-header__wrapper
+        h1.c-header__logo
+          img(src='/img/logo.png', alt='Mauro Viotto Advogados')
+        .c-header__navigation
+          +navigation()
