--- a/src/css/site.styl
+++ b/src/css/site.styl
@@ -11,5 +11,6 @@
 @import 'utils/layout'
 
 // components
+@import 'components/footer'
 @import 'components/header'
 @import 'components/navigation'
