--- a/templates/components/header.jade
+++ b/templates/components/header.jade
@@ -7,6 +7,6 @@ mixin header()
     .h-limiter
       .c-header__wrapper
         h1.c-header__logo
-          img(src='/img/logo.png', alt='Mauro Viotto Advogados')
+          img(src='/img/logo.png', alt=config.APP_NAME)
         .c-header__navigation
           +navigation()
