added - [wip] about/banner

--- a/src/css/site.styl
+++ b/src/css/site.styl
@@ -9,8 +9,11 @@
 @import 'utils/reset'
 @import 'utils/helpers'
 @import 'utils/layout'
+@import 'utils/type'
 
 // components
+@import 'components/about'
+@import 'components/banner'
 @import 'components/footer'
 @import 'components/header'
 @import 'components/navigation'
