--- a/src/css/utils/layout.styl
+++ b/src/css/utils/layout.styl
@@ -5,10 +5,11 @@
   min-height 100vh
 
   &__header
+    left -1rem
     position fixed
     top 2rem
     width calc(100% + 2rem)
-    left -1rem
+    z-index 1
 
   &__content
     flex 1
