--- a/templates/components/about.jade
+++ b/templates/components/about.jade
@@ -3,6 +3,7 @@ mixin about()
     .h-limiter
       h2.u-type-heading.u-type-heading--main Escritório
       ul.c-about__items
-        li.c-about__item
-          h3.u-type-heading Quem somos
-          p.u-type-text.c-about__text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque quibusdam, corrupti accusantium ea, sapiente placeat a id voluptates dolores vitae, animi. Dolores quaerat voluptatibus quod illo amet natus accusamus provident.
+        each item in abouts
+          li.c-about__item
+            h3.u-type-heading #{item.name}
+            p.u-type-text.c-about__text #{item.text}
