--- a/src/css/components/about.styl
+++ b/src/css/components/about.styl
@@ -5,18 +5,7 @@
   position relative
 
   &:before
-    $s = 36px
-    border-left $s solid transparent
-    border-right @border-left
-    border-top $s solid $white
-    content ''
-    display block
-    height: 0
-    left 50%
-    margin-left -($s)
-    position absolute
-    top 0
-    width: 0
+    triangle($white)
 
   &__text
     font-style italic
