--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -6,6 +6,7 @@ include ../components/about
 include ../components/banner
 include ../components/footer
 include ../components/header
+include ../components/team
 
 //- markup
 block content
@@ -15,5 +16,6 @@ block content
     .u-layout__content
       +banner()
       +about()
+      +team()
 
     +footer()
