--- a/src/css/site.styl
+++ b/src/css/site.styl
@@ -13,7 +13,9 @@
 
 // components
 @import 'components/about'
+@import 'components/avatar'
 @import 'components/banner'
 @import 'components/footer'
 @import 'components/header'
 @import 'components/navigation'
+@import 'components/team'
