--- a/src/css/site.styl
+++ b/src/css/site.styl
@@ -15,7 +15,9 @@
 @import 'components/about'
 @import 'components/avatar'
 @import 'components/banner'
+@import 'components/contact'
 @import 'components/footer'
 @import 'components/header'
 @import 'components/navigation'
+@import 'components/services'
 @import 'components/team'
