--- a/src/css/components/contact.styl
+++ b/src/css/components/contact.styl
@@ -2,3 +2,12 @@
   background $medium-gray
   color $white
   padding 5rem 0
+
+  &__items
+    grid()
+
+  &__item
+    grid-cell()
+
+    &--short
+      grid-cell(0 0 45%)
