--- a/src/css/site.styl
+++ b/src/css/site.styl
@@ -15,6 +15,7 @@
 @import 'components/about'
 @import 'components/avatar'
 @import 'components/banner'
+@import 'components/contact-form'
 @import 'components/contact'
 @import 'components/footer'
 @import 'components/header'
